--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "15.6.1",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
-    "react-router-dom": "4.1.2",
+    "react-router-dom": "4.2.2",
+    "react-router": "4.2.0",
     "redux": "3.7.2",
     "redux-mock-store": "1.2.3",
     "redux-thunk": "2.2.0",
