--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
@@ -36,8 +37,8 @@
     "react-dom": "15.6.1",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
-    "react-router-dom": "4.2.2",
     "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
     "redux": "3.7.2",
     "redux-mock-store": "1.2.3",
     "redux-thunk": "2.2.0",
