--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.3.0",
     "react-dom": "15.6.1",
-    "react-modal": "2.2.2",
+    "react-modal": "^3.4.4",
     "react-redux": "5.0.5",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
