Add bypass to coinmarketcap api in server and use cors to connect to frontend port

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "boilerplate-react-app",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Andrew Mead",
+  "author": "JR",
   "license": "MIT",
   "scripts": {
     "build:dev": "webpack",
@@ -22,6 +22,7 @@
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "cors": "^2.8.4",
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
@@ -42,6 +43,7 @@
     "redux": "3.7.2",
     "redux-mock-store": "1.2.3",
     "redux-thunk": "^2.2.0",
+    "request": "^2.86.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
